[gd_scene load_steps=15 format=3 uid="uid://dy715lluh8chj"]

[ext_resource type="Script" path="res://scripts/subv.gd" id="1_35kq4"]
[ext_resource type="Theme" uid="uid://c1uu6giijvvtr" path="res://textures/ux.tres" id="1_b7d5o"]
[ext_resource type="Script" path="res://scripts/UX.gd" id="2_gqqty"]
[ext_resource type="Material" uid="uid://c043vswtewoen" path="res://textures/fisheye_material.tres" id="3_wa382"]
[ext_resource type="PackedScene" uid="uid://b87bj03fqa0ww" path="res://scenes/worlds/testworld.tscn" id="4_fgt8u"]
[ext_resource type="Texture2D" uid="uid://c27oaf68kg784" path="res://textures/keyboard.png" id="14_rx56l"]
[ext_resource type="PackedScene" uid="uid://bcqitmriebl6h" path="res://scenes/info_box_road.tscn" id="15_ist7t"]
[ext_resource type="Texture2D" uid="uid://dxxqu1rchx46w" path="res://textures/controller.png" id="15_rppdj"]
[ext_resource type="PackedScene" uid="uid://cso5mt6mbahy6" path="res://scenes/info_box_road_point.tscn" id="16_2ki2t"]
[ext_resource type="Script" path="res://scripts/BuildUX.gd" id="16_j37em"]

[sub_resource type="ViewportTexture" id="ViewportTexture_jmb3l"]
viewport_path = NodePath("TextureRect/SubViewport")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ptrkc"]
bg_color = Color(0.207843, 0.207843, 0.207843, 0.568627)

[sub_resource type="Gradient" id="Gradient_pt5oe"]
offsets = PackedFloat32Array(0.0626223, 0.0880626, 0.131115)
colors = PackedColorArray(0, 0, 0, 1, 1, 1, 1, 1, 1, 1, 1, 0)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_r2y2g"]
gradient = SubResource("Gradient_pt5oe")
fill = 1
fill_from = Vector2(0.5, 0.5)
fill_to = Vector2(0.5, 0)
metadata/_snap_enabled = true

[node name="UX" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
theme = ExtResource("1_b7d5o")
script = ExtResource("2_gqqty")

[node name="TextureRect" type="TextureRect" parent="."]
material = ExtResource("3_wa382")
use_parent_material = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("ViewportTexture_jmb3l")
expand_mode = 2

[node name="SubViewport" type="SubViewport" parent="TextureRect"]
handle_input_locally = false
audio_listener_enable_3d = true
physics_object_picking = true
size = Vector2i(1280, 720)
script = ExtResource("1_35kq4")

[node name="World" parent="TextureRect/SubViewport" instance=ExtResource("4_fgt8u")]

[node name="Panel" type="Panel" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_ptrkc")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 30
theme_override_constants/margin_top = 30
theme_override_constants/margin_right = 30
theme_override_constants/margin_bottom = 30

[node name="VBoxContainerParams" type="VBoxContainer" parent="MarginContainer"]
visible = false
custom_minimum_size = Vector2(400, 0)
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 8
alignment = 1

[node name="Label" type="Label" parent="MarginContainer/VBoxContainerParams"]
layout_mode = 2
text = "Suspension Parameters"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="MarginContainer/VBoxContainerParams"]
layout_mode = 2

[node name="Param1" type="HBoxContainer" parent="MarginContainer/VBoxContainerParams"]
layout_mode = 2
alignment = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainerParams/Param1"]
layout_mode = 2
size_flags_horizontal = 2
text = "Linear Limit Softness - "

[node name="LabelValueLLSoftness" type="Label" parent="MarginContainer/VBoxContainerParams/Param1"]
layout_mode = 2
size_flags_horizontal = 10
text = "0.00 - "
horizontal_alignment = 2

[node name="HSliderLLSoftness" type="HSlider" parent="MarginContainer/VBoxContainerParams/Param1"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 10
max_value = 1.0
step = 0.01

[node name="Param2" type="HBoxContainer" parent="MarginContainer/VBoxContainerParams"]
layout_mode = 2
alignment = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainerParams/Param2"]
layout_mode = 2
size_flags_horizontal = 2
text = "Linear Limit Restitution - "

[node name="LabelValueLLRestitution" type="Label" parent="MarginContainer/VBoxContainerParams/Param2"]
layout_mode = 2
size_flags_horizontal = 10
text = "0.00 - "
horizontal_alignment = 2

[node name="HSliderLLRestitution" type="HSlider" parent="MarginContainer/VBoxContainerParams/Param2"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 10
max_value = 1.0
step = 0.01

[node name="Param3" type="HBoxContainer" parent="MarginContainer/VBoxContainerParams"]
layout_mode = 2
alignment = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainerParams/Param3"]
layout_mode = 2
size_flags_horizontal = 2
text = "Linear Limit Damping - "

[node name="LabelValueLLDamping" type="Label" parent="MarginContainer/VBoxContainerParams/Param3"]
layout_mode = 2
size_flags_horizontal = 10
text = "0.00 - "
horizontal_alignment = 2

[node name="HSliderLLDamping" type="HSlider" parent="MarginContainer/VBoxContainerParams/Param3"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 10
max_value = 1.0
step = 0.01

[node name="HSeparator2" type="HSeparator" parent="MarginContainer/VBoxContainerParams"]
layout_mode = 2

[node name="Param4" type="HBoxContainer" parent="MarginContainer/VBoxContainerParams"]
layout_mode = 2
alignment = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainerParams/Param4"]
layout_mode = 2
size_flags_horizontal = 2
text = "Linear Spring Stiffness - "

[node name="LabelValueSStiffness" type="Label" parent="MarginContainer/VBoxContainerParams/Param4"]
layout_mode = 2
size_flags_horizontal = 10
text = "0.00 - "
horizontal_alignment = 2

[node name="HSliderSStiffness" type="HSlider" parent="MarginContainer/VBoxContainerParams/Param4"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 10
max_value = 1.0
step = 0.01

[node name="Param5" type="HBoxContainer" parent="MarginContainer/VBoxContainerParams"]
layout_mode = 2
alignment = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainerParams/Param5"]
layout_mode = 2
size_flags_horizontal = 2
text = "Linear Spring Damping - "

[node name="LabelValueSDamping" type="Label" parent="MarginContainer/VBoxContainerParams/Param5"]
layout_mode = 2
size_flags_horizontal = 10
text = "0.00 - "
horizontal_alignment = 2

[node name="HSliderSDamping" type="HSlider" parent="MarginContainer/VBoxContainerParams/Param5"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 10
max_value = 1.0
step = 0.01

[node name="HSeparator3" type="HSeparator" parent="MarginContainer/VBoxContainerParams"]
layout_mode = 2

[node name="ButtonDefault" type="Button" parent="MarginContainer/VBoxContainerParams"]
layout_mode = 2
size_flags_horizontal = 4
text = "Default"

[node name="VBoxContainerMenu" type="VBoxContainer" parent="MarginContainer"]
visible = false
layout_mode = 2
size_flags_horizontal = 0

[node name="Label" type="Label" parent="MarginContainer/VBoxContainerMenu"]
layout_mode = 2
theme_override_font_sizes/font_size = 60
text = "Menu"

[node name="HSeparator" type="HSeparator" parent="MarginContainer/VBoxContainerMenu"]
layout_mode = 2

[node name="ButtonOptions" type="Button" parent="MarginContainer/VBoxContainerMenu"]
layout_mode = 2
text = "Options"

[node name="ButtonDebug" type="Button" parent="MarginContainer/VBoxContainerMenu"]
layout_mode = 2
text = "Debug"

[node name="ButtonControls" type="Button" parent="MarginContainer/VBoxContainerMenu"]
layout_mode = 2
text = "Controls"

[node name="ButtonQuit" type="Button" parent="MarginContainer/VBoxContainerMenu"]
layout_mode = 2
size_flags_vertical = 10
text = "Quit"

[node name="CenterContainer" type="CenterContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 4

[node name="VBoxContainerOptions" type="VBoxContainer" parent="MarginContainer/CenterContainer"]
visible = false
layout_mode = 2
alignment = 1

[node name="Label" type="Label" parent="MarginContainer/CenterContainer/VBoxContainerOptions"]
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "Options"

[node name="HSeparator" type="HSeparator" parent="MarginContainer/CenterContainer/VBoxContainerOptions"]
layout_mode = 2

[node name="HBoxContainerResolution" type="HBoxContainer" parent="MarginContainer/CenterContainer/VBoxContainerOptions"]
layout_mode = 2
alignment = 2

[node name="Label" type="Label" parent="MarginContainer/CenterContainer/VBoxContainerOptions/HBoxContainerResolution"]
layout_mode = 2
text = "Screen Resolution - "

[node name="OptionButtonRes" type="OptionButton" parent="MarginContainer/CenterContainer/VBoxContainerOptions/HBoxContainerResolution"]
layout_mode = 2
item_count = 3
popup/item_0/text = "1280x720"
popup/item_0/id = 0
popup/item_1/text = "1920x1080"
popup/item_1/id = 1
popup/item_2/text = "2560x1440"
popup/item_2/id = 2

[node name="HBoxContainerWindowMode" type="HBoxContainer" parent="MarginContainer/CenterContainer/VBoxContainerOptions"]
layout_mode = 2
alignment = 2

[node name="Label" type="Label" parent="MarginContainer/CenterContainer/VBoxContainerOptions/HBoxContainerWindowMode"]
layout_mode = 2
text = "Window Mode - "

[node name="OptionButtonWin" type="OptionButton" parent="MarginContainer/CenterContainer/VBoxContainerOptions/HBoxContainerWindowMode"]
layout_mode = 2
item_count = 2
selected = 0
popup/item_0/text = "Windowed"
popup/item_0/id = 0
popup/item_1/text = "Fullscreen"
popup/item_1/id = 1

[node name="HSeparator2" type="HSeparator" parent="MarginContainer/CenterContainer/VBoxContainerOptions"]
layout_mode = 2

[node name="ButtonApply" type="Button" parent="MarginContainer/CenterContainer/VBoxContainerOptions"]
layout_mode = 2
text = "Apply"

[node name="HSeparator3" type="HSeparator" parent="MarginContainer/CenterContainer/VBoxContainerOptions"]
layout_mode = 2

[node name="ButtonConfirmSettings" type="Button" parent="MarginContainer/CenterContainer/VBoxContainerOptions"]
layout_mode = 2
text = "Confirm Display Settings"

[node name="DisplayTimer" type="Timer" parent="MarginContainer/CenterContainer/VBoxContainerOptions"]
wait_time = 15.0
one_shot = true

[node name="VBoxContainerControls" type="VBoxContainer" parent="MarginContainer/CenterContainer"]
visible = false
layout_mode = 2
alignment = 1

[node name="HBoxContainerControlType" type="HBoxContainer" parent="MarginContainer/CenterContainer/VBoxContainerControls"]
layout_mode = 2
alignment = 1

[node name="ButtonKeyboard" type="Button" parent="MarginContainer/CenterContainer/VBoxContainerControls/HBoxContainerControlType"]
layout_mode = 2
text = "Keyboard"

[node name="VSeparator" type="VSeparator" parent="MarginContainer/CenterContainer/VBoxContainerControls/HBoxContainerControlType"]
layout_mode = 2

[node name="ButtonController" type="Button" parent="MarginContainer/CenterContainer/VBoxContainerControls/HBoxContainerControlType"]
layout_mode = 2
text = "Controller"

[node name="TextureRectKeyboardControls" type="TextureRect" parent="MarginContainer/CenterContainer/VBoxContainerControls"]
visible = false
custom_minimum_size = Vector2(600, 600)
layout_mode = 2
texture = ExtResource("14_rx56l")
expand_mode = 3

[node name="TextureRectControllerControls" type="TextureRect" parent="MarginContainer/CenterContainer/VBoxContainerControls"]
custom_minimum_size = Vector2(600, 600)
layout_mode = 2
texture = ExtResource("15_rppdj")
expand_mode = 3

[node name="BuildUX" type="Control" parent="MarginContainer"]
layout_mode = 2
mouse_filter = 1
script = ExtResource("16_j37em")

[node name="Reticle" type="TextureRect" parent="MarginContainer/BuildUX"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("GradientTexture2D_r2y2g")

[node name="LabelBuildMode" type="Label" parent="MarginContainer/BuildUX"]
layout_mode = 2
offset_left = 501.0
offset_top = 30.0
offset_right = 718.0
offset_bottom = 85.0
size_flags_horizontal = 4
size_flags_vertical = 0
text = "Build Mode"
horizontal_alignment = 1

[node name="HBoxContainerSelector" type="HBoxContainer" parent="MarginContainer/BuildUX"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -33.5
offset_top = -42.0
offset_right = 33.5
grow_horizontal = 2
grow_vertical = 0
alignment = 1

[node name="LabelItemSelector" type="Label" parent="MarginContainer/BuildUX/HBoxContainerSelector"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Item"
horizontal_alignment = 1

[node name="VBoxContainerInfoBoxes" type="VBoxContainer" parent="MarginContainer/BuildUX"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -62.0
offset_right = 126.0
offset_bottom = 62.0
grow_vertical = 2

[node name="InfoBoxRoad" parent="MarginContainer/BuildUX/VBoxContainerInfoBoxes" instance=ExtResource("15_ist7t")]
layout_mode = 2

[node name="InfoBoxRoadPoint" parent="MarginContainer/BuildUX/VBoxContainerInfoBoxes" instance=ExtResource("16_2ki2t")]
layout_mode = 2

[connection signal="button_up" from="MarginContainer/VBoxContainerMenu/ButtonOptions" to="." method="_on_button_options_button_up"]
[connection signal="button_up" from="MarginContainer/VBoxContainerMenu/ButtonDebug" to="." method="_on_button_debug_button_up"]
[connection signal="button_up" from="MarginContainer/VBoxContainerMenu/ButtonControls" to="." method="_on_button_controls_button_up"]
[connection signal="button_up" from="MarginContainer/VBoxContainerMenu/ButtonQuit" to="." method="_on_button_quit_button_up"]
[connection signal="item_selected" from="MarginContainer/CenterContainer/VBoxContainerOptions/HBoxContainerResolution/OptionButtonRes" to="." method="_on_option_button_item_selected"]
[connection signal="button_up" from="MarginContainer/CenterContainer/VBoxContainerOptions/ButtonApply" to="." method="_on_button_apply_button_up"]
[connection signal="button_up" from="MarginContainer/CenterContainer/VBoxContainerOptions/ButtonConfirmSettings" to="." method="_on_button_confirm_settings_button_up"]
[connection signal="timeout" from="MarginContainer/CenterContainer/VBoxContainerOptions/DisplayTimer" to="." method="_on_display_timer_timeout"]
[connection signal="button_up" from="MarginContainer/CenterContainer/VBoxContainerControls/HBoxContainerControlType/ButtonKeyboard" to="." method="_on_button_keyboard_button_up"]
[connection signal="button_up" from="MarginContainer/CenterContainer/VBoxContainerControls/HBoxContainerControlType/ButtonController" to="." method="_on_button_controller_button_up"]
